# ros_allostatic_control

./: README.md  group_analysis.ipynb  individual_analysis.ipynb
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/allostasis_msg/: resource.h
devel/include/allostatic_control/: Action.h  Blob.h  Drive.h  GradientInfo.h  HomeostaticState.h  TemperatureState.h
devel/include/gazebo_simulation/: Resource.h  resource2.h
devel/lib/pkgconfig/: allostasis_msg.pc  allostatic_control.pc  gazebo_simulation.pc  robot_description.pc
devel/share/allostasis_msg/cmake/: allostasis_msg-msg-extras.cmake  allostasis_msg-msg-paths.cmake  allostasis_msgConfig.cmake
devel/share/allostatic_control/cmake/: allostatic_control-msg-extras.cmake  allostatic_control-msg-paths.cmake  allostatic_controlConfig.cmake
devel/share/gazebo_simulation/cmake/: gazebo_simulation-msg-extras.cmake  gazebo_simulation-msg-paths.cmake  gazebo_simulationConfig.cmake
devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
devel/share/roseus/ros/allostasis_msg/: manifest.l
devel/share/roseus/ros/allostatic_control/: manifest.l
devel/share/roseus/ros/gazebo_simulation/: manifest.l
src/allostatic_control/: CMakeLists.txt  package.xml
src/allostatic_control/config/: joint_position_control.yaml  pid.yaml  roseco_control.yaml  test_control.yaml
src/allostatic_control/launch/: allostatic_control.launch  roseco_control.launch
src/allostatic_control/msg/: Action.msg  Blob.msg  Drive.msg  HomeostaticState.msg  TemperatureState.msg
src/allostatic_control/scripts/: ActionSelector.py  AllostaticController.py  HomeostaticController.py  MotorController.py  StimuliDetector.py  TemperatureGradient.py
src/allostatic_control/scripts/behaviors/: AvoidObstacle.py  CatchTarget.py  RandomExplore.py  SandDiving.py
src/gazebo_simulation/: CMakeLists.txt  package.xml
src/gazebo_simulation/launch/: open_arena.launch  roseco_env.launch
src/gazebo_simulation/models/resource_BLUE/: model.config  model.sdf
src/gazebo_simulation/models/resource_GREEN/: model.config  model.sdf
src/gazebo_simulation/models/resource_RED/: model.config  model.sdf
src/gazebo_simulation/msg/: Resource.msg
src/gazebo_simulation/scripts/: ResourceSpawner.py
src/gazebo_simulation/worlds/: roseco_empty.world
src/robot_description/: package.xml
src/robot_description/config/: ecobot.yaml  sensors.yaml
src/robot_description/meshes/arena/: arena_floor.stl  arena_wall_blue.stl  arena_wall_pink.stl  arena_wall_white.stl  arena_wall_yellow.stl  box01.stl  box02.stl  box03b.stl  cubo_blue.stl  cubo_green.stl  cubo_orange.stl  cubo_red.stl  cubo_yellow.stl
src/robot_description/meshes/roseco/: camera.stl  eco_base.stl  eco_chassis.stl  line_sensor.stl  loca.stl  motorL.stl  motorR.stl  wheelL.stl  wheelR.stl
src/robot_description/rviz/: roseco_description.rviz
src/robot_description/urdf/: arena.urdf.xacro  open_arena.urdf.xacro  roseco.gazebo.xacro  roseco.xacro
(+57 files in other folders)
